--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "fusioncharts": "^3.12.2",
+    "handlebars": "^4.0.11",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "jquery": "^3.3.1",
     "morgan": "~1.9.0",
     "node-fetch": "^2.2.0",
     "superagent": "^3.8.3",
