--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "standard && node ./test/test.js"
+    "test": "standard && node ./test/test.js",
+    "test-ui": "nightwatch ./test/ui/dashboard.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "chai-http": "^1.0.0",
+    "nightwatch": "^0.9.21",
     "standard": "^11.0.1"
   }
 }
