--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "standard && node ./test/test.js",
-    "test-ui": "nightwatch ./test/ui/dashboard.js"
+    "test": "standard && node ./test/test.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
